--- a/JetSonCAM_9281.yaml
+++ b/JetSonCAM_9281.yaml
@@ -2,10 +2,10 @@
 
 #common parameters
 #support: 1 imu 1 cam; 1 imu 2 cam: 2 cam; 
-imu: 0         
+imu: 1
 num_of_cam: 2  
 
-imu_topic: ""
+imu_topic: "/mavros/imu/data"
 image0_topic: "/arducam/left/image_throttled"
 image1_topic: "/arducam/right/image_throttled"
 output_path: ""
@@ -25,8 +25,8 @@ body_T_cam0: !!opencv-matrix
    cols: 4
    dt: d
    data: [1, 0, 0, -0.04,
-          0, 1, 0, 0,
           0, 0, 1, 0,
+          0, -1, 0, 0,
           0, 0, 0, 1]
 
 body_T_cam1: !!opencv-matrix
@@ -34,12 +34,12 @@ body_T_cam1: !!opencv-matrix
    cols: 4
    dt: d
    data: [1, 0, 0, 0.04,
-          0, 1, 0, 0,
           0, 0, 1, 0,
+          0, -1, 0, 0,
           0, 0, 0, 1]
 
 #Multiple thread support
-multiple_thread: 1
+multiple_thread: 4
 ################################################
 ###########   GPU accelarate    ################
 # If your GPU resources is limitted or you want to use GPU for other computaion. You can set
@@ -56,16 +56,26 @@ use_gpu_acc_flow: 1
 
 
 
-#feature traker parameters
-max_cnt: 100            # max feature number in feature tracking
-min_dist: 30            # min distance between two features 
+#feature tracker parameters
+max_cnt: 120            # max feature number in feature tracking
+min_dist: 20            # min distance between two features 
 freq: 0                # frequence (Hz) of publish tracking result. At least 10Hz for good estimation. If set 0, the frequence will be same as raw image 
 F_threshold: 1.0        # ransac threshold (pixel)
 show_track: 0           # publish tracking image as topic
 flow_back: 1            # perform forward and backward optical flow to improve feature tracking accuracy
 
 #optimization parameters
-max_solver_time: 0.03  # max solver itration time (ms), to guarantee real time
-max_num_iterations: 4   # max solver itrations, to guarantee real time
+max_solver_time: 0.04  # max solver itration time (ms), to guarantee real time
+max_num_iterations: 8   # max solver itrations, to guarantee real time
 keyframe_parallax: 10.0 # keyframe selection threshold (pixel)
 
+#imu parameters       The more accurate parameters you provide, the better performance
+acc_n: 0.2          # accelerometer measurement noise standard deviation. #0.2   0.04
+gyr_n: 0.05         # gyroscope measurement noise standard deviation.     #0.05  0.004
+acc_w: 0.02         # accelerometer bias random work noise standard deviation.  #0.02
+gyr_w: 0.005       # gyroscope bias random work noise standard deviation.     #4.0e-5
+g_norm: 9.81007         # gravity magnitude
+
+#unsynchronization parameters
+estimate_td: 1                      # online estimate time offset between camera and imu
+td: 0                             # initial value of time offset. unit: s. readed image clock + td = real image clock (IMU clock)
